# DFODE-kit

./: .gitignore  README.md  pyproject.toml  setup.py
cases/oneD_freely_propagating_flame/: Allclean  Allrun  case_init.ipynb  oneDflame_setup.py
cases/twoDCounterflowFlame/: Allclean  Allrun
cases/twoD_temporally_evolving_jet/: Allrun  inference.py
deepflame-node/assests/: README.md  config.sh  inference.py  init.sh  samplingStrategy.json
deepflame-node/training_scripts/: aggregate_net.py
deepflame-node/validation_n_analysis/: T-Qdot-distri.ipynb  qdot-env.ipynb
deepflame_node/: one_d_flame_setup.py  utils.py
deepflame_node/assests/: constructDataset.py  dfODENetSample.py  mpRandomSeperateSampling.py  randomDataGenerator.ipynb
deepflame_node/training_scripts/: T-Qdot-distri.ipynb  mp-random-each-sampling.py  sub.py  train.py
demo/: demo.sh
dfode_kit/: __init__.py  utils.py
dfode_kit/cli/: command_loader.py  main.py
dfode_kit/cli_tools/: command_loader.py  main.py
dfode_kit/data_operations/: __init__.py  augment_data.py  h5_kit.py  label_data.py
dfode_kit/df_interface/: __init__.py  flame_configurations.py  sample_case.py
model_test/priori/: test.py
papers/: papers.bib
sampling_cases/oneDFlame.orig/: Allrun  case_setup.ipynb  init.sh
sampling_cases/twoDCounterflow.orig/: Allrun
scripts/: augment_with_filter.py  run.sh
test/zeroD_H2_cubicReactor/: Allrun  inference.py
tutorials/oneD_freely_propagating_flame/: dfode_kit_tutorial.ipynb  log.blockMesh  log.checkMesh  log.decomposePar  log.foamCloneCase  log.mpirun  log.postProcess  (+3 more)
(+10814 files in other folders)
